# quicksvg

./: .dockerignore  .gitignore  .lintstagedrc.mjs  ARCHITECTURE.md  README.md  compose.yaml  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
apps/api/: .gitignore  .lintstagedrc.json  .ruff.toml  Dockerfile  README.md  package.json  pyproject.toml
apps/api/src/: constants.py  main.py  routes.py  services.py
apps/web/: .env.example  .lintstagedrc.json  Dockerfile  README.md  eslint.config.js  package.json
apps/web/src/lib/: constants.ts
apps/web/src/lib/components/: CopySvgButton.svelte  ModeToggle.svelte
apps/web/src/routes/: +layout.svelte  +page.svelte  page.remote.ts
scripts/: clean.ts  start.sh  stop.sh
