[project]
name = "api"
version = "1.0.0"
description = "quicksvg backend — FastAPI for PNG to SVG conversion"
readme = "README.md"
authors = [
    { name = "Harsh Thakur", email = "harshprojects2002@outlook.com" },
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "ty>=0.0.39",
]
