[project]
name = "api"
version = "1.0.0"
description = "quicksvg backend — FastAPI for PNG to SVG conversion"
readme = "README.md"
authors = [
    { name = "Harsh Thakur", email = "harshprojects2002@outlook.com" },
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.38",
    "vtracer>=0.6.15",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "ty>=0.0.39",
]
